fix index.html styles icons overlapping

--- a/styles/index.styles.css
+++ b/styles/index.styles.css
@@ -1,7 +1,7 @@
 /* INDEX.HTML */
 
 .main-page {
-  padding-top: 5rem;
+  padding-top: 1rem;
 }
 
 .landing-page,
@@ -24,6 +24,9 @@
   font-size: 1.2rem;
   font-family: Cascadia Code, monospace;
 }
+.stack-container {
+  height: auto;
+}
 
 .stack-container ul {
   list-style-type: none;
@@ -45,6 +48,7 @@
 .progress-container {
   display: flex;
   justify-content: center;
+  height: auto;
 }
 .icons-header {
   text-align: center;
